# gprc-rust-tonic

./: Cargo.toml  README.md  build.rs
api/v2/protos/: order_mgmt.proto
src/: server.rs
src/ch01/: client.rs  ecommerce.rs
src/ch02/: ordermgmt.rs  server.rs
