[package]
name = "gprc-rs"
version = "0.1.0"
authors = ["Shan Desai <shantanoo.desai@gmail.com"]
edition = "2018"

[[bin]]
name = "ecomm-server"
path = "src/server.rs"

[[bin]]
name = "ecomm-client"
path = "src/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.4", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.3"

