[package]
name = "gprc-rs"
version = "0.1.0"
authors = ["Shan Desai <shantanoo.desai@gmail.com"]
edition = "2018"

[[bin]]
name = "ch01-ecomm-server"
path = "src/ch01/server.rs"

[[bin]]
name = "ch01-ecomm-client"
path = "src/ch01/client.rs"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.4", features = ["serde", "v4"] }

# Necessary when using Wellknown Types e.g. google/protobuf/wrappers.proto
prost-types = "0.7"

[build-dependencies]
tonic-build = "0.3"

